fixed drop-down spacing issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -22,7 +22,9 @@
   background-color: #f1f1f1;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  position: relative;
+  left:0;top:100%;
+  position: absolute;
+  
   z-index: 1;
 }
 
@@ -32,6 +34,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  
 }
 
 /* Change color of dropdown links on hover */
